; ModuleID = '/home/carl/AnghaBench/linux/drivers/pci/controller/dwc/extr_pcie-designware.c_dw_pcie_readl_ib_unroll.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/pci/controller/dwc/extr_pcie-designware.c_dw_pcie_readl_ib_unroll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dw_pcie = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.dw_pcie*, i64, i64)* @dw_pcie_readl_ib_unroll to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @dw_pcie_readl_ib_unroll(%struct.dw_pcie* %0, i64 %1, i64 %2) #0 {
  %4 = alloca %struct.dw_pcie*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store %struct.dw_pcie* %0, %struct.dw_pcie** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i64, i64* %5, align 8
  %9 = call i64 @PCIE_GET_ATU_INB_UNR_REG_OFFSET(i64 %8)
  store i64 %9, i64* %7, align 8
  %10 = load %struct.dw_pcie*, %struct.dw_pcie** %4, align 8
  %11 = load i64, i64* %7, align 8
  %12 = load i64, i64* %6, align 8
  %13 = add nsw i64 %11, %12
  %14 = call i64 @dw_pcie_readl_atu(%struct.dw_pcie* %10, i64 %13)
  ret i64 %14
}

declare dso_local i64 @PCIE_GET_ATU_INB_UNR_REG_OFFSET(i64) #1

declare dso_local i64 @dw_pcie_readl_atu(%struct.dw_pcie*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
